outline & name change

--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -4,6 +4,20 @@
    "cell_type": "markdown",
    "id": "237bb28a-58a4-4629-a934-50597ddc7e76",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2fffa13c",
+   "metadata": {},
+   "source": [
+    "# 2022/23 NBA Drafts Team Impact"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9ca74a0",
+   "metadata": {},
    "source": [
     "Data on Teams:\n",
     "- https://www.nba.com/draft/2022/team-profiles\n",
@@ -48,11 +62,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fd8b71ef",
+   "metadata": {},
+   "source": [
+    "## Program Objectives\n",
+    "\n",
+    "1. Find 2021/22 Team Statistics\n",
+    "2. Find 2022's new draft picks with their corresponding characteristics and new teams\n",
+    "3. Prediction the next season's results based on the above\n",
+    "4. Compare results with 2022/23 Team Statistics\n",
+    "5. Answer the Focus Question: Is the NBA competatively balanced? What is the impact of the best players drafted into the worst performing teams?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "be77b788-e6ff-44c9-8f8e-f05874955f05",
    "metadata": {},
    "source": [
-    "# Web-scraping\n",
-    "## Player Data"
+    "## 1. 21/22 Team Stats\n",
+    "### Web-scraping: Player Data"
    ]
   },
   {
