xpath to follow

--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -2245,11 +2245,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d9e7096f-aafb-4592-a06d-c225d5d03e52",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.chrome.service import Service\n",
+    "from selenium.webdriver.chrome.options import Options\n",
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "\n",
+    "#This keeps browser open after accessing it\n",
+    "options = Options()\n",
+    "options.add_experimental_option(\"detach\",True)\n",
+    "\n",
+    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()),options=options)\n",
+    "\n",
+    "driver.get(\"https://www.nba.com/stats/draft/history?Season=2022\")\n",
+    "\n",
+    "#lets automate the maximized chrome window option\n",
+    "driver.maximize_window()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "325aa6a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]/a/\")\n",
+    "for player in players:\n",
+    "    print(player.text)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
