--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -2269,15 +2269,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "325aa6a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Paolo Banchero\n",
+      "Chet Holmgren\n",
+      "Jabari Smith Jr.\n",
+      "Keegan Murray\n",
+      "Jaden Ivey\n",
+      "Bennedict Mathurin\n",
+      "Shaedon Sharpe\n",
+      "Dyson Daniels\n",
+      "Jeremy Sochan\n",
+      "Johnny Davis\n",
+      "Ousmane Dieng\n",
+      "Jalen Williams\n",
+      "Jalen Duren\n",
+      "Ochai Agbaji\n",
+      "Mark Williams\n",
+      "AJ Griffin\n",
+      "Tari Eason\n",
+      "Dalen Terry\n",
+      "Jake LaRavia\n",
+      "Malaki Branham\n",
+      "Christian Braun\n",
+      "Walker Kessler\n",
+      "David Roddy\n",
+      "MarJon Beauchamp\n",
+      "Blake Wesley\n",
+      "Wendell Moore Jr.\n",
+      "Nikola Jovic\n",
+      "Patrick Baldwin\n",
+      "TyTy Washington Jr.\n",
+      "Peyton Watson\n",
+      "Andrew Nembhard\n",
+      "Caleb Houstan\n",
+      "Christian Koloko\n",
+      "Jaylin Williams\n",
+      "Max Christie\n",
+      "Jaden Hardy\n",
+      "Kennedy Chandler\n",
+      "Bryce McGowens\n",
+      "E.J. Liddell\n",
+      "Trevor Keels\n",
+      "Moussa Diabate\n",
+      "Ryan Rollins\n",
+      "Josh Minott\n",
+      "Vince Williams Jr.\n",
+      "Kendall Brown\n",
+      "Isaiah Mobley\n"
+     ]
+    }
+   ],
    "source": [
-    "players = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]/a/\")\n",
+    "players = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]/a\")\n",
     "for player in players:\n",
     "    print(player.text)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "adec755a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]/a\")\n",
+    "teams = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[2]/a\")\n",
+    "affiliations = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[3]\")\n",
+    "round_numbers = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[5]\")\n",
+    "round_picks = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[6]\")\n",
+    "overall_picks = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[7]\")\n",
+    "\n",
+    "#lets create a dictionary for joining all the results\n",
+    "\n"
    ]
   },
   {
