player data scrapping complete, with the correct number of players

--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -2269,7 +2269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "325aa6a6",
    "metadata": {},
    "outputs": [
@@ -2312,22 +2312,26 @@
       "Christian Koloko\n",
       "Jaylin Williams\n",
       "Max Christie\n",
+      "Gabriele Procida\n",
       "Jaden Hardy\n",
       "Kennedy Chandler\n",
+      "Khalifa Diop\n",
       "Bryce McGowens\n",
       "E.J. Liddell\n",
       "Trevor Keels\n",
       "Moussa Diabate\n",
       "Ryan Rollins\n",
       "Josh Minott\n",
+      "Ismael Kamagate\n",
       "Vince Williams Jr.\n",
       "Kendall Brown\n",
-      "Isaiah Mobley\n"
+      "Isaiah Mobley\n",
+      "Matteo Spagnolo\n"
      ]
     }
    ],
    "source": [
-    "players = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]/a\")\n",
+    "players = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]\") #remember we can't use the a-tag here because on the website, not all the players have an a-tag.\n",
     "for player in players:\n",
     "    print(player.text)\n",
     "    "
@@ -2335,12 +2339,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "adec755a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "players = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]/a\")\n",
+    "players = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]\")\n",
     "teams = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[2]/a\")\n",
     "affiliations = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[3]\")\n",
     "round_numbers = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[5]\")\n",
@@ -2363,7 +2367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "39f415ff",
    "metadata": {},
    "outputs": [
@@ -2714,7 +2718,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
-       "      <td>Jaden Hardy</td>\n",
+       "      <td>Gabriele Procida</td>\n",
        "      <td>Portland Trail Blazers</td>\n",
        "      <td>Fortitudo Pallacanestro Bologna (Italy)</td>\n",
        "      <td>2</td>\n",
@@ -2723,7 +2727,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
-       "      <td>Kennedy Chandler</td>\n",
+       "      <td>Jaden Hardy</td>\n",
        "      <td>Sacramento Kings</td>\n",
        "      <td>Ignite (G League)</td>\n",
        "      <td>2</td>\n",
@@ -2732,7 +2736,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
-       "      <td>Bryce McGowens</td>\n",
+       "      <td>Kennedy Chandler</td>\n",
        "      <td>San Antonio Spurs</td>\n",
        "      <td>Tennessee</td>\n",
        "      <td>2</td>\n",
@@ -2741,7 +2745,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
-       "      <td>E.J. Liddell</td>\n",
+       "      <td>Khalifa Diop</td>\n",
        "      <td>Cleveland Cavaliers</td>\n",
        "      <td>CB Gran Canaria (Spain)</td>\n",
        "      <td>2</td>\n",
@@ -2750,7 +2754,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
-       "      <td>Trevor Keels</td>\n",
+       "      <td>Bryce McGowens</td>\n",
        "      <td>Minnesota Timberwolves</td>\n",
        "      <td>Nebraska</td>\n",
        "      <td>2</td>\n",
@@ -2759,7 +2763,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
-       "      <td>Moussa Diabate</td>\n",
+       "      <td>E.J. Liddell</td>\n",
        "      <td>New Orleans Pelicans</td>\n",
        "      <td>Ohio State</td>\n",
        "      <td>2</td>\n",
@@ -2768,7 +2772,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
-       "      <td>Ryan Rollins</td>\n",
+       "      <td>Trevor Keels</td>\n",
        "      <td>New York Knicks</td>\n",
        "      <td>Duke</td>\n",
        "      <td>2</td>\n",
@@ -2777,7 +2781,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
-       "      <td>Josh Minott</td>\n",
+       "      <td>Moussa Diabate</td>\n",
        "      <td>LA Clippers</td>\n",
        "      <td>Michigan</td>\n",
        "      <td>2</td>\n",
@@ -2786,7 +2790,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
-       "      <td>Vince Williams Jr.</td>\n",
+       "      <td>Ryan Rollins</td>\n",
        "      <td>Atlanta Hawks</td>\n",
        "      <td>Toledo</td>\n",
        "      <td>2</td>\n",
@@ -2795,7 +2799,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
-       "      <td>Kendall Brown</td>\n",
+       "      <td>Josh Minott</td>\n",
        "      <td>Charlotte Hornets</td>\n",
        "      <td>Memphis</td>\n",
        "      <td>2</td>\n",
@@ -2804,12 +2808,48 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45</th>\n",
-       "      <td>Isaiah Mobley</td>\n",
+       "      <td>Ismael Kamagate</td>\n",
        "      <td>Detroit Pistons</td>\n",
        "      <td>Paris (France)</td>\n",
        "      <td>2</td>\n",
        "      <td>16</td>\n",
        "      <td>46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46</th>\n",
+       "      <td>Vince Williams Jr.</td>\n",
+       "      <td>Memphis Grizzlies</td>\n",
+       "      <td>Virginia Commonwealth</td>\n",
+       "      <td>2</td>\n",
+       "      <td>17</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>47</th>\n",
+       "      <td>Kendall Brown</td>\n",
+       "      <td>Minnesota Timberwolves</td>\n",
+       "      <td>Baylor</td>\n",
+       "      <td>2</td>\n",
+       "      <td>18</td>\n",
+       "      <td>48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48</th>\n",
+       "      <td>Isaiah Mobley</td>\n",
+       "      <td>Cleveland Cavaliers</td>\n",
+       "      <td>Southern California</td>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>Matteo Spagnolo</td>\n",
+       "      <td>Minnesota Timberwolves</td>\n",
+       "      <td>Vanoli Cremona (Italy)</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2852,17 +2892,21 @@
        "32     Christian Koloko         Toronto Raptors   \n",
        "33      Jaylin Williams   Oklahoma City Thunder   \n",
        "34         Max Christie      Los Angeles Lakers   \n",
-       "35          Jaden Hardy  Portland Trail Blazers   \n",
-       "36     Kennedy Chandler        Sacramento Kings   \n",
-       "37       Bryce McGowens       San Antonio Spurs   \n",
-       "38         E.J. Liddell     Cleveland Cavaliers   \n",
-       "39         Trevor Keels  Minnesota Timberwolves   \n",
-       "40       Moussa Diabate    New Orleans Pelicans   \n",
-       "41         Ryan Rollins         New York Knicks   \n",
-       "42          Josh Minott             LA Clippers   \n",
-       "43   Vince Williams Jr.           Atlanta Hawks   \n",
-       "44        Kendall Brown       Charlotte Hornets   \n",
-       "45        Isaiah Mobley         Detroit Pistons   \n",
+       "35     Gabriele Procida  Portland Trail Blazers   \n",
+       "36          Jaden Hardy        Sacramento Kings   \n",
+       "37     Kennedy Chandler       San Antonio Spurs   \n",
+       "38         Khalifa Diop     Cleveland Cavaliers   \n",
+       "39       Bryce McGowens  Minnesota Timberwolves   \n",
+       "40         E.J. Liddell    New Orleans Pelicans   \n",
+       "41         Trevor Keels         New York Knicks   \n",
+       "42       Moussa Diabate             LA Clippers   \n",
+       "43         Ryan Rollins           Atlanta Hawks   \n",
+       "44          Josh Minott       Charlotte Hornets   \n",
+       "45      Ismael Kamagate         Detroit Pistons   \n",
+       "46   Vince Williams Jr.       Memphis Grizzlies   \n",
+       "47        Kendall Brown  Minnesota Timberwolves   \n",
+       "48        Isaiah Mobley     Cleveland Cavaliers   \n",
+       "49      Matteo Spagnolo  Minnesota Timberwolves   \n",
        "\n",
        "                                 Affliation Round Number Round Pick  \\\n",
        "0                                      Duke            1          1   \n",
@@ -2911,6 +2955,10 @@
        "43                                   Toledo            2         14   \n",
        "44                                  Memphis            2         15   \n",
        "45                           Paris (France)            2         16   \n",
+       "46                    Virginia Commonwealth            2         17   \n",
+       "47                                   Baylor            2         18   \n",
+       "48                      Southern California            2         19   \n",
+       "49                   Vanoli Cremona (Italy)            2         20   \n",
        "\n",
        "   Overall Pick  \n",
        "0             1  \n",
@@ -2958,10 +3006,14 @@
        "42           43  \n",
        "43           44  \n",
        "44           45  \n",
-       "45           46  "
+       "45           46  \n",
+       "46           47  \n",
+       "47           48  \n",
+       "48           49  \n",
+       "49           50  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2975,7 +3027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "1ba71b15",
    "metadata": {},
    "outputs": [],
