--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -67,38 +67,20 @@
    "source": [
     "## Program Objectives\n",
     "\n",
-    "1. Find 2021/22 Team Statistics\n",
-    "2. Find 2022's new draft picks with their corresponding characteristics and new teams\n",
-    "3. Prediction the next season's results based on the above\n",
+    "1. Find 2022's new draft picks with their corresponding characteristics and new teams\n",
+    "2. Find 2021/22 Team Statistics\n",
+    "3. Predict the next season's results based on the above\n",
     "4. Compare results with 2022/23 Team Statistics\n",
     "5. Answer the Focus Question: Is the NBA competatively balanced? What is the impact of the best players drafted into the worst performing teams?"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "be77b788-e6ff-44c9-8f8e-f05874955f05",
-   "metadata": {},
-   "source": [
-    "## 1. 21/22 Team Stats\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bc6b1b62",
-   "metadata": {},
-   "source": [
-    "### Static Webscraping of 2021/22 Team Data\n",
-    "\n",
-    "Here data on the performance of the 21/22 seaons's teams is webscraped."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b27d9b6a",
+   "id": "94fce0cd",
    "metadata": {},
    "source": [
     "\n",
-    "## 2. 2022 Draft Picks"
+    "## 1. 2022 Draft Picks"
    ]
   },
   {
@@ -171,7 +153,6 @@
    ],
    "source": [
     "\n",
-    "#url = \"https://www.nba.com/stats/teams\"\n",
     "url = \"https://www.nba.com/stats/draft/history?Season=2022\"\n",
     "\n",
     "page_to_scrape = requests.get(url)\n",
@@ -2946,6 +2927,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b84cf95b",
+   "metadata": {},
+   "source": [
+    "## 2. 21/22 Team Stats\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4727ea6",
+   "metadata": {},
+   "source": [
+    "### Interactive Webscraping of 2021/22 Team Data\n",
+    "\n",
+    "Here data on the performance of the 21/22 seaons's teams is webscraped."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e26f081",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#url = \"https://www.nba.com/stats/teams\"\n",
+    "url = \"https://www.nba.com/stats/teams/traditional?sort=W_PCT&dir=-1&SeasonType=Regular+Season&PerMode=Totals\"\n",
+    "\n",
+    "html = requests.get(url)\n",
+    "soup = BeautifulSoup(html.text,\"html.parser\")\n",
+    "\n",
+    "teams = soup.findAll(\"td\", attrs={\"class\":\"Crom_text__NpR1_ Crom_primary__EajZu StatsTeamsTraditionalTable_primary__U2_3n Crom_stickySecondColumn__29Dwf\"}) \n",
+    "#<td class=\"Crom_text__NpR1_ Crom_primary__EajZu StatsTeamsTraditionalTable_primary__U2_3n Crom_stickySecondColumn__29Dwf\"><a href=\"/stats/team/1610612749/traditional\" class=\"Anchor_anchor__cSc3P\" data-is-external=\"false\" data-has-more=\"false\" data-has-children=\"true\"><div class=\"StatsTeamsTraditionalTable_teamLogoSpan__1HRTS\"><div class=\"StatsTeamsTraditionalTable_teamLogo__mva45\"><div class=\"TeamLogo_block__rSWmO\"><img src=\"https://cdn.nba.com/logos/nba/1610612749/global/L/logo.svg\" title=\"Milwaukee Bucks Logo\" alt=\"Milwaukee Bucks Logo\" class=\"TeamLogo_logo__PclAJ\" loading=\"lazy\"></div></div><span>Milwaukee Bucks</span></div></a></td>\n",
+    "\n",
+    "for team in teams:\n",
+    "    print(team.text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c0d2dd83",
+   "metadata": {},
+   "source": [
+    "## 3. Predictive Data Analysis\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1279de92-c689-4630-bcba-a418bbe6461b",
@@ -3180,22 +3207,6 @@
     "print(standings.shape)\n",
     "print(standings.head())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0996593f-ee67-48c8-8dff-bd57121ba2a0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "857229d8-53b1-4e66-9238-d79ab838372e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
