player specific stats

--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -51,7 +51,12 @@
     " - Shuttle run\n",
     " - Lane agility\n",
     " - Three quarter sprint\n",
-    "-https://www.basketball-reference.com/players/\n"
+    "-https://www.basketball-reference.com/players/\n",
+    "\n",
+    "- https://www.nba.com/stats/players/traditional?SeasonType=Regular+Season\n",
+    " - this is data on all nba players in the 22/23 season. \n",
+    " - would have to filter it out to get just the draft players.\n",
+    " - could be useful info for the comparison"
    ]
   },
   {
@@ -2924,6 +2929,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "597ceee4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://www.nba.com/stats/players/traditional?SeasonType=Regular%20Season\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "521528d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0 = pd.DataFrame(draft_player_stats_2022)\n",
+    "df0\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34afb428",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df0.to_excel('2022_NBA_Drafted_Player_Stats.xlsx', sheet_name='2022 Draft Stats', index=False) #index=False leaves out the first coloumn above\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "b84cf95b",
    "metadata": {},
@@ -4471,6 +4507,17 @@
     "# Show the first 5 rows of the dataframe\n",
     "print(standings.shape)\n",
     "print(standings.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdf1892e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Now close the Chrome browser window and terminate the WebDriver session\n",
+    "driver.quit()\n"
    ]
   }
  ],
