--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -6371,6 +6371,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0afd75b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Close the WebDriver\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 52,
    "id": "74227540",
    "metadata": {},
@@ -7737,12 +7748,12 @@
     "options = Options()\n",
     "options.add_experimental_option(\"detach\",True)\n",
     "\n",
-    "driver = webdriver.Chrome(service=Service(ChromeDriverManager().install()),options=options) \n",
+    "driver2 = webdriver.Chrome(service=Service(ChromeDriverManager().install()),options=options) \n",
     "\n",
-    "driver.get(\"https://www.nba.com/stats/teams/traditional?sort=W_PCT&dir=-1&SeasonType=Regular+Season&PerMode=Totals&Season=2022-23\")\n",
+    "driver2.get(\"https://www.nba.com/stats/teams/traditional?sort=W_PCT&dir=-1&SeasonType=Regular+Season&PerMode=Totals&Season=2022-23\")\n",
     "\n",
     "#lets automate the maximized chrome window option\n",
-    "driver.maximize_window()\n"
+    "driver2.maximize_window()\n"
    ]
   },
   {
@@ -7789,7 +7800,7 @@
     }
    ],
    "source": [
-    "teams = driver.find_elements(\"xpath\",\"//*[@id='__next']/div[2]/div[2]/div[3]/section[2]/div/div[2]/div[3]/table/tbody/tr/td[2]/a/div/span\")\n",
+    "teams = driver2.find_elements(\"xpath\",\"//*[@id='__next']/div[2]/div[2]/div[3]/section[2]/div/div[2]/div[3]/table/tbody/tr/td[2]/a/div/span\")\n",
     "#//*[@id=\"__next\"]/div[2]/div[2]/div[3]/section[2]/div/div[2]/div[3]/table/tbody/tr[1]/td[2]/a/div/span\n",
     "#//*[@id=\"__next\"]/div[2]/div[2]/div[3]/section[2]/div/div[2]/div[3]/table/tbody/tr[2]/td[2]/a/div/span\n",
     "#//*[@id=\"__next\"]/div[2]/div[2]/div[3]/section[2]/div/div[2]/div[3]/table/tbody/tr[11]/td[2]/a/div/span\n",
@@ -7804,10 +7815,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rankings = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[1]\")\n",
-    "wins = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[4]\") \n",
-    "losses = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[5]\") \n",
-    "points = driver.find_elements(\"xpath\",\"//table/tbody/tr/td[8]\") \n"
+    "rankings = driver2.find_elements(\"xpath\",\"//table/tbody/tr/td[1]\")\n",
+    "wins = driver2.find_elements(\"xpath\",\"//table/tbody/tr/td[4]\") \n",
+    "losses = driver2.find_elements(\"xpath\",\"//table/tbody/tr/td[5]\") \n",
+    "points = driver2.find_elements(\"xpath\",\"//table/tbody/tr/td[8]\") \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06916593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Close the WebDriver\n",
+    "driver2.quit()\n"
    ]
   },
   {
