--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -8232,6 +8232,45 @@
     "\n",
     "Finally the data on the performance of the 22/23 seaons's teams, will be compared to the predicted data, calculated based on drafted player performance."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "260982b1",
+   "metadata": {},
+   "source": [
+    "![Worst Team Wins](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/nba%20conferences.PNG)\n",
+    "\n",
+    "![Worst Team Points](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/nba%20conferences.PNG)\n",
+    "\n",
+    "![Best Team Wins](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/nba%20conferences.PNG)\n",
+    "\n",
+    "![Best Team Points](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/nba%20conferences.PNG)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "088f6c1c",
+   "metadata": {},
+   "source": [
+    "## 5. Answering the Focus Question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72a0841f",
+   "metadata": {},
+   "source": [
+    "### So is the NBA competitively balanced? And what is the impact of the best players drafted into the worst performing teams?\n",
+    "\n",
+    "These are the conclusions:\n",
+    "- One thing that is clear from the results is that our predictive analysis methods strongly impacts our results.\n",
+    "- Most of the worst teams, from the plot above, improved on the number of points they scored in the 22/23 season.\n",
+    "- However, regardless of the best drafts going to these teams, the number of season wins worsened in most cases.\n",
+    "- Almost all the best teams of the 21/22 season won less games in 22/23.\n",
+    "- Interestingly, even with the worst of the drafted players in these teams, the number of points scored for the best teams increased or stayed the same.\n",
+    "\n",
+    "Therefore, the NBA is competitively balance, but the season performance of the team depends on more than just the introduction of newly drafted players."
+   ]
   }
  ],
  "metadata": {
