--- a/NBA Drafted Player Impact.ipynb
+++ b/NBA Drafted Player Impact.ipynb
@@ -8238,13 +8238,13 @@
    "id": "260982b1",
    "metadata": {},
    "source": [
-    "![Worst Team Wins](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/nba%20conferences.PNG)\n",
+    "![Worst Team Wins](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/images/worst%20team%20wins.png)\n",
     "\n",
-    "![Worst Team Points](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/nba%20conferences.PNG)\n",
+    "![Worst Team Points](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/images/worst%20team%20points.png)\n",
     "\n",
-    "![Best Team Wins](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/nba%20conferences.PNG)\n",
+    "![Best Team Wins](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/images/best%20team%20wins.png)\n",
     "\n",
-    "![Best Team Points](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/nba%20conferences.PNG)\n"
+    "![Best Team Points](https://github.com/thopsialive/NBA-Drafts-Player-Impact/blob/master/images/best%20team%20points.png)\n"
    ]
   },
   {
